<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#ff8a80"
    tools:context=".UI.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:text="@string/start_text"
        android:layout_gravity="center_horizontal"
        android:textColor="#880e4f"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/start_text1"
        android:layout_gravity="center_horizontal"
        android:textColor="#880e4f"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/start_text3"
        android:layout_gravity="center_horizontal"
        android:textColor="#880e4f"
        />

    <Button
        android:id="@+id/startnow"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/buttoncorners"
        android:onClick="Startnow"
        android:text="@string/start_now"
        android:textColor="#fff"
        android:textSize="22sp"


        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        >
    </com.google.android.gms.ads.AdView>






</LinearLayout>